--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ spring.application.name=biblioteca
 #Cambio el puerto de la app
 server.port=8090
 
-spring.datasource.driver-class-name=com.mysql://localhost:3305/apirest
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/apirest
 spring.datasource.username=root
 spring.datasource.pasword=root
 
