--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,12 @@ server.port=8090
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/apirest
+spring.datasource.url=jdbc:mysql://localhost:3305/apirest
 spring.datasource.username=root
-spring.datasource.pasword=root
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-sprint.jpa.hibernate.ddl-auto=update
-#cada vez que levantamos la aplicación mira si existen o no las tablas. si no existen las crea.
+spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
-#Para que muestre las sentencias sql en los logs
 spring.jpa.properties.hibernate.format_sql=true
